Changed app name from DPI to DigiPayG2C

--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DPI - Digital Payment Initiative | Financial Inclusion for Rural Nigeria</title>
-    <meta name="description" content="Digital Payment Initiative (DPI) - Government-backed e-payment platform empowering rural communities across Nigeria with secure, accessible digital financial services." />
+    <title>DigiPayG2C - Digital Payment Initiative | Financial Inclusion for Rural Nigeria</title>
+    <meta name="description" content="Digital Payment Initiative (DigiPayG2C) - Government-backed e-payment platform empowering rural communities across Nigeria with secure, accessible digital financial services." />
     <meta name="author" content="Federal Government of Nigeria" />
-    <meta name="keywords" content="DPI, digital payments, Nigeria, financial inclusion, rural banking, NIN, government disbursement" />
+    <meta name="keywords" content="DigiPayG2C, digital payments, Nigeria, financial inclusion, rural banking, NIN, government disbursement" />
 
-    <meta property="og:title" content="DPI - Digital Payment Initiative" />
+    <meta property="og:title" content="DigiPayG2C - Digital Payment Initiative" />
     <meta property="og:description" content="Empowering rural communities through accessible and secure digital financial services" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@DPI_Nigeria" />
+    <meta name="twitter:site" content="@DigiPayG2C_Nigeria" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
